--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/core-recommended": "^9.3",
         "drupal/dropzonejs": "^2.6",
         "drupal/media_bulk_upload": "^3.0",
+        "drupal/title_field_for_manage_display": "^2.0",
         "enyo/dropzone": "^5.7"
     },
     "conflict": {
