--- a/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_mid_gt_tiltle.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_mid_gt_tiltle.yml
@@ -1,8 +1,9 @@
-uuid: ab78fe31-c2c3-4639-810e-10d56510d0ea
+uuid: 202007fb-8614-407b-b7dc-7f903559661a
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.custom_frontpage_content_img_mid_gt_tiltle
     - field.field.node.article.body
     - field.field.node.article.field_custom_comments_field
     - field.field.node.article.field_display_title
@@ -10,6 +11,7 @@ dependencies:
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
     - field.field.node.article.field_trending_tags
+    - image.style.medium
     - node.type.article
   module:
     - media
@@ -17,10 +19,10 @@ dependencies:
     - user
 _core:
   default_config_hash: b4RQ-Nfz-gOoG_jjftd_qDIz4lf_-OzlxoLHkRXjfrE
-id: node.article.default
+id: node.article.custom_frontpage_content_img_mid_gt_tiltle
 targetEntityType: node
 bundle: article
-mode: default
+mode: custom_frontpage_content_img_mid_gt_tiltle
 content:
   field_display_title:
     type: title_value_field_formatter
@@ -30,17 +32,7 @@ content:
       linked: '1'
       classes: ''
     third_party_settings: {  }
-    weight: 1
-    region: content
-  field_exclusive:
-    type: boolean
-    label: hidden
-    settings:
-      format: custom
-      format_custom_false: ''
-      format_custom_true: Exclusive
-    third_party_settings: {  }
-    weight: 0
+    weight: 2
     region: content
   field_global_tags:
     type: entity_reference_label
@@ -48,19 +40,20 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_main_image:
     type: media_thumbnail
     label: hidden
     settings:
-      image_link: ''
-      image_style: ''
+      image_link: content
+      image_style: medium
     third_party_settings: {  }
-    weight: 3
+    weight: 0
     region: content
 hidden:
   body: true
   field_custom_comments_field: true
+  field_exclusive: true
   field_trending_tags: true
   links: true
