--- a/config_files/core.entity_view_display.node.article.custom_frontpage_content_exclusive_title_gt_img_small_.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_content_exclusive_title_gt_img_small_.yml
@@ -1,8 +1,9 @@
-uuid: ab78fe31-c2c3-4639-810e-10d56510d0ea
+uuid: be277116-36bb-4adf-a313-addd0490fecb
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.custom_frontpage_content_exclusive_title_gt_img_small_
     - field.field.node.article.body
     - field.field.node.article.field_custom_comments_field
     - field.field.node.article.field_display_title
@@ -10,6 +11,7 @@ dependencies:
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
     - field.field.node.article.field_trending_tags
+    - image.style.thumbnail
     - node.type.article
   module:
     - media
@@ -17,10 +19,10 @@ dependencies:
     - user
 _core:
   default_config_hash: b4RQ-Nfz-gOoG_jjftd_qDIz4lf_-OzlxoLHkRXjfrE
-id: node.article.default
+id: node.article.custom_frontpage_content_exclusive_title_gt_img_small_
 targetEntityType: node
 bundle: article
-mode: default
+mode: custom_frontpage_content_exclusive_title_gt_img_small_
 content:
   field_display_title:
     type: title_value_field_formatter
@@ -55,7 +57,7 @@ content:
     label: hidden
     settings:
       image_link: ''
-      image_style: ''
+      image_style: thumbnail
     third_party_settings: {  }
     weight: 3
     region: content
