--- a/config_files/core.entity_view_display.node.article.custom_frontpage_content_top_block_1_big_node_.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_content_top_block_1_big_node_.yml
@@ -1,8 +1,9 @@
-uuid: ab78fe31-c2c3-4639-810e-10d56510d0ea
+uuid: 6a5625fe-8ab9-4b54-bc49-223c2903539f
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.custom_frontpage_content_top_block_1_big_node_
     - field.field.node.article.body
     - field.field.node.article.field_custom_comments_field
     - field.field.node.article.field_display_title
@@ -12,15 +13,14 @@ dependencies:
     - field.field.node.article.field_trending_tags
     - node.type.article
   module:
-    - media
     - title_field_for_manage_display
     - user
 _core:
   default_config_hash: b4RQ-Nfz-gOoG_jjftd_qDIz4lf_-OzlxoLHkRXjfrE
-id: node.article.default
+id: node.article.custom_frontpage_content_top_block_1_big_node_
 targetEntityType: node
 bundle: article
-mode: default
+mode: custom_frontpage_content_top_block_1_big_node_
 content:
   field_display_title:
     type: title_value_field_formatter
@@ -32,16 +32,6 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
-  field_exclusive:
-    type: boolean
-    label: hidden
-    settings:
-      format: custom
-      format_custom_false: ''
-      format_custom_true: Exclusive
-    third_party_settings: {  }
-    weight: 0
-    region: content
   field_global_tags:
     type: entity_reference_label
     label: hidden
@@ -51,16 +41,17 @@ content:
     weight: 2
     region: content
   field_main_image:
-    type: media_thumbnail
+    type: entity_reference_entity_view
     label: hidden
     settings:
-      image_link: ''
-      image_style: ''
+      view_mode: default
+      link: false
     third_party_settings: {  }
-    weight: 3
+    weight: 0
     region: content
 hidden:
   body: true
   field_custom_comments_field: true
+  field_exclusive: true
   field_trending_tags: true
   links: true
