--- a/config_files/core.entity_view_display.node.article.search_index.yml
+++ b/config_files/core.entity_view_display.node.article.search_index.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.search_index
     - field.field.node.article.body
     - field.field.node.article.field_custom_comments_field
+    - field.field.node.article.field_display_title
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
@@ -35,6 +36,7 @@ content:
     region: content
 hidden:
   field_custom_comments_field: true
+  field_display_title: true
   field_exclusive: true
   field_global_tags: true
   field_main_image: true
