--- a/config_files/core.entity_view_display.node.article.teaser.yml
+++ b/config_files/core.entity_view_display.node.article.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
     - field.field.node.article.field_custom_comments_field
+    - field.field.node.article.field_display_title
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
@@ -15,6 +16,7 @@ dependencies:
   module:
     - media
     - text
+    - title_field_for_manage_display
     - user
 _core:
   default_config_hash: 0ur5-yZyR8pJ3lugC_Micbr6V_tpMWz-yHFhtuLcZo8
@@ -25,11 +27,21 @@ mode: teaser
 content:
   body:
     type: text_trimmed
-    label: above
+    label: hidden
     settings:
       trim_length: 150
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_display_title:
+    type: title_value_field_formatter
+    label: hidden
+    settings:
+      tag: h2
+      linked: '1'
+      classes: ''
+    third_party_settings: {  }
+    weight: 1
     region: content
   field_global_tags:
     type: entity_reference_label
@@ -48,12 +60,8 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
 hidden:
   field_custom_comments_field: true
   field_exclusive: true
   field_trending_tags: true
+  links: true
