--- a/config_files/views.view.frontpage_content_main_content_blocks.yml
+++ b/config_files/views.view.frontpage_content_main_content_blocks.yml
@@ -19,7 +19,7 @@ dependencies:
     - taxonomy
     - user
 id: frontpage_content_main_content_blocks
-label: 'Frontpage: Content: main content blocks'
+label: 'Frontpage: Breaking'
 module: views
 description: ''
 tag: ''
