--- a/config_files/core.entity_view_display.node.article.custom_sidebar_img_title_author_date.yml
+++ b/config_files/core.entity_view_display.node.article.custom_sidebar_img_title_author_date.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
     - field.field.node.article.field_trending_tags
-    - image.style.medium
+    - image.style.tall_300x480
     - node.type.article
   module:
     - media
@@ -39,7 +39,7 @@ content:
     label: hidden
     settings:
       image_link: content
-      image_style: medium
+      image_style: tall_300x480
     third_party_settings: {  }
     weight: 0
     region: content
