--- a/config_files/core.entity_view_mode.node.custom_frontpage_content_img_med_tiltle_author_date.yml
+++ b/config_files/core.entity_view_mode.node.custom_frontpage_content_img_med_tiltle_author_date.yml
@@ -5,6 +5,6 @@ dependencies:
   module:
     - node
 id: node.custom_frontpage_content_img_med_tiltle_author_date
-label: 'Custom | Frontpage: Content: Img(Med)->Tiltle->Author->Date'
+label: 'Custom | Frontpage: Content: Img(Med)->Exclusive->Tiltle->Author->Date'
 targetEntityType: node
 cache: true
