--- a/config_files/core.entity_view_mode.node.custom_frontpage_content_img_mid_gt_tiltle.yml
+++ b/config_files/core.entity_view_mode.node.custom_frontpage_content_img_mid_gt_tiltle.yml
@@ -5,6 +5,6 @@ dependencies:
   module:
     - node
 id: node.custom_frontpage_content_img_mid_gt_tiltle
-label: 'Custom | Frontpage: Content: Img(Med)->GT->Tiltle'
+label: 'Custom | Frontpage: Content: Img(Med)->GT->Exclisive->Tiltle'
 targetEntityType: node
 cache: true
