--- a/config_files/core.entity_form_display.node.article.default.yml
+++ b/config_files/core.entity_form_display.node.article.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.field.node.article.body
     - field.field.node.article.field_custom_comments_field
-    - field.field.node.article.field_display_title
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
@@ -122,5 +121,4 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden:
-  field_display_title: true
+hidden: {  }
