--- a/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_tall_gt_tiltle.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_tall_gt_tiltle.yml
@@ -6,7 +6,6 @@ dependencies:
     - core.entity_view_mode.node.custom_frontpage_content_img_tall_gt_tiltle
     - field.field.node.article.body
     - field.field.node.article.field_custom_comments_field
-    - field.field.node.article.field_display_title
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
@@ -15,7 +14,6 @@ dependencies:
     - node.type.article
   module:
     - media
-    - title_field_for_manage_display
     - user
 _core:
   default_config_hash: b4RQ-Nfz-gOoG_jjftd_qDIz4lf_-OzlxoLHkRXjfrE
@@ -24,13 +22,13 @@ targetEntityType: node
 bundle: article
 mode: custom_frontpage_content_img_tall_gt_tiltle
 content:
-  field_display_title:
-    type: title_value_field_formatter
+  field_exclusive:
+    type: boolean
     label: hidden
     settings:
-      tag: h4
-      linked: '1'
-      classes: ''
+      format: custom
+      format_custom_false: ''
+      format_custom_true: Exclusive
     third_party_settings: {  }
     weight: 2
     region: content
@@ -54,6 +52,5 @@ content:
 hidden:
   body: true
   field_custom_comments_field: true
-  field_exclusive: true
   field_trending_tags: true
   links: true
