--- a/config_files/core.extension.yml
+++ b/config_files/core.extension.yml
@@ -25,6 +25,8 @@ module:
   help: 0
   history: 0
   image: 0
+  layout_builder: 0
+  layout_discovery: 0
   link: 0
   media: 0
   media_bulk_upload: 0
@@ -42,7 +44,6 @@ module:
   system: 0
   taxonomy: 0
   text: 0
-  title_field_for_manage_display: 0
   toolbar: 0
   tour: 0
   user: 0
@@ -52,4 +53,8 @@ module:
 theme:
   bartik: 0
   seven: 0
+  stable: 0
+  classy: 0
+  bootstrap5: 0
+  nwp_bootstrap5: 0
 profile: standard
