--- a/config_files/core.entity_view_display.node.article.custom_frontpage_content_top_block_1_big_node_.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_content_top_block_1_big_node_.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.custom_frontpage_content_top_block_1_big_node_
     - field.field.node.article.body
+    - field.field.node.article.field_body_via_paragraphs
     - field.field.node.article.field_custom_comments_field
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
@@ -39,6 +40,7 @@ content:
     region: content
 hidden:
   body: true
+  field_body_via_paragraphs: true
   field_custom_comments_field: true
   field_exclusive: true
   field_trending_tags: true
