--- a/config_files/core.entity_view_display.node.article.custom_frontpage_highlighted_random_nodes.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_highlighted_random_nodes.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.custom_frontpage_highlighted_random_nodes
     - field.field.node.article.body
+    - field.field.node.article.field_body_via_paragraphs
     - field.field.node.article.field_custom_comments_field
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
@@ -32,6 +33,7 @@ content:
     region: content
 hidden:
   body: true
+  field_body_via_paragraphs: true
   field_custom_comments_field: true
   field_global_tags: true
   field_main_image: true
