--- a/config_files/core.entity_view_display.node.article.full.yml
+++ b/config_files/core.entity_view_display.node.article.full.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_display.comment.custom_comments.custom_view_mode
     - core.entity_view_mode.node.full
     - field.field.node.article.body
+    - field.field.node.article.field_body_via_paragraphs
     - field.field.node.article.field_custom_comments_field
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
@@ -15,8 +16,8 @@ dependencies:
     - node.type.article
   module:
     - comment
+    - entity_reference_revisions
     - media
-    - text
     - user
 _core:
   default_config_hash: b4RQ-Nfz-gOoG_jjftd_qDIz4lf_-OzlxoLHkRXjfrE
@@ -25,12 +26,14 @@ targetEntityType: node
 bundle: article
 mode: full
 content:
-  body:
-    type: text_default
-    label: hidden
-    settings: {  }
+  field_body_via_paragraphs:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_custom_comments_field:
     type: comment_default
@@ -39,7 +42,7 @@ content:
       view_mode: custom_view_mode
       pager_id: 0
     third_party_settings: {  }
-    weight: 6
+    weight: 5
     region: content
   field_global_tags:
     type: entity_reference_label
@@ -47,7 +50,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 5
+    weight: 4
     region: content
   field_main_image:
     type: media_thumbnail
@@ -56,7 +59,7 @@ content:
       image_link: ''
       image_style: large
     third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
   field_trending_tags:
     type: entity_reference_label
@@ -64,12 +67,13 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 4
+    weight: 3
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
 hidden:
+  body: true
   field_exclusive: true
