--- a/config_files/core.entity_view_display.node.article.teaser.yml
+++ b/config_files/core.entity_view_display.node.article.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
+    - field.field.node.article.field_body_via_paragraphs
     - field.field.node.article.field_custom_comments_field
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
@@ -111,6 +112,7 @@ content:
     weight: 0
     region: content
 hidden:
+  field_body_via_paragraphs: true
   field_custom_comments_field: true
   field_exclusive: true
   field_trending_tags: true
