--- a/config_files/core.extension.yml
+++ b/config_files/core.extension.yml
@@ -13,11 +13,13 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dropzonejs: 0
   dynamic_page_cache: 0
   editor: 0
+  entity_reference_revisions: 0
   field: 0
   field_ui: 0
   file: 0
@@ -36,6 +38,7 @@ module:
   node: 0
   options: 0
   page_cache: 0
+  page_manager: 0
   path: 0
   path_alias: 0
   rdf: 0
@@ -49,6 +52,7 @@ module:
   user: 0
   views_ui: 0
   views: 10
+  paragraphs: 11
   standard: 1000
 theme:
   bartik: 0
